--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "crypto-random-string": "^1.0.0"
   },
   "devDependencies": {
-    "serverless": "^1.38.0"
+    "serverless": "^1.38.0",
+    "serverless-prune-plugin": "^1.3.2"
   }
 }
