--- a/serverless.yml
+++ b/serverless.yml
@@ -1,11 +1,10 @@
-service: nern-auth
+service: serverless-auth-system
 
 provider:
   name: aws
   runtime: nodejs8.10
   memorySize: 128
   timeout: 30
-  logRetentionInDays: 7
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -31,18 +30,17 @@ functions:
     handler: auth/logout.handler
     events:
       - http:
-          path: login
+          path: logout
           method: get
+  update:
+    handler: auth/update.handler
+    events:
+      - http:
+          path: update
+          method: post
 
   authorizer:
     handler: auth/authorizer.handler
-  greetings:
-    handler: pages/greetings.handler
-    events:
-      - http:
-          path: greetings
-          method: get
-          authorizer: ${self:custom.authorizer}
 
 resources:
   Resources:
@@ -52,10 +50,10 @@ resources:
       Properties:
         TableName: sessions
         AttributeDefinitions:
-          - AttributeName: session
+          - AttributeName: id
             AttributeType: S
         KeySchema:
-          - AttributeName: session
+          - AttributeName: id
             KeyType: HASH
         TimeToLiveSpecification:
           AttributeName: ttl
@@ -70,10 +68,10 @@ resources:
       Properties:
         TableName: users
         AttributeDefinitions:
-          - AttributeName: username
+          - AttributeName: email
             AttributeType: S
         KeySchema:
-          - AttributeName: username
+          - AttributeName: email
             KeyType: HASH
         ProvisionedThroughput:
           ReadCapacityUnits: 1
